--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,13 @@ body{
     margin: 0;
     padding: 0;
     font-family: Arial, Verdana, Tahoma, sans-serif;
-    
 }
+
+i {
+  color :#03187C
+}
+
+/* --- HEADER  --- */
 
 .header{
   background-color:  #03187C;
@@ -12,7 +17,54 @@ body{
   padding-top: 14px;
   padding-bottom: 14px;
   text-align: center;
+}
 
+/* --- FORM CREATE  --- */
+
+.form-container{
+  display: flex;
+  justify-content: center;
+}
+
+.form-create > textarea{
+  border: 4px dotted #03187C;
+  font-family:Verdana, Arial, Tahoma, sans-serif;
+}
+
+.form-create > button{
+  color: #2c0b8e;
+  padding: 5px 10px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  /* position: relative;
+  display: inline-block; */
+  outline: none;
+  border-radius: 5px;
+  border: 2px solid #2c0b8e;
+  background: #fff;
+}
+.form-create > button:hover {
+  background:#2c0b8e ;
+  color: #fff
+}
+
+legend{
+  color: #03187C;
+  font-size: 14px;
+}
+
+.form-create-radio-and-legend{
+  display:flex;
+  flex-direction: row
+}
+
+/* --- LIST --- */
+
+h2{
+  color: #2c0b8e;
+  font-family: Verdana;
+  margin-left: 10px;
 }
 
 .post-it-list{
@@ -20,9 +72,41 @@ body{
   flex-direction: row;
   flex-wrap :wrap;
   justify-content: space-around;
- 
-  
+
 }
+
+/* --- TO DO --- */
+
+.post-it{
+  border-radius: 0px 0px 10px 0px;
+  border: 2px solid #eee;
+  box-shadow: 2px 2px 10px 0 #eee;
+  box-sizing: border-box;
+  padding: 15px;
+  width: 175px;
+  height: 175px;
+  margin: 10px ;
+  position :relative;
+}
+
+.container-buttons-todo{
+  position : absolute;
+  bottom:0px;
+  right:0px;
+}
+
+.buttons-todo{
+  background-color:white;
+  border : none;
+  margin: 2px;
+}
+
+.strike{
+  text-decoration: line-through;
+}
+
+
+/* --- FORM TO MODIDY --- */
 
 .button-form-modify{
   color: #2c0b8e;
@@ -30,8 +114,6 @@ body{
   font-weight: bold;
   cursor: pointer;
   transition: all 0.2s ease;
-  /* position: relative;
-  display: inline-block; */
   outline: none;
   border-radius: 5px;
   border: 1px solid #2c0b8e;
@@ -50,124 +132,12 @@ body{
 
 
 
-.post-it{
-  /* background-color: #FFF1BD; */
-  border-radius: 0px 0px 10px 0px;
-  border: 2px solid #eee;
-  box-shadow: 2px 2px 10px 0 #eee;
-  box-sizing: border-box;
-  padding: 15px;
-  width: 175px;
-  height: 175px;
-  margin: 10px ;
-  position :relative;
-}
-
-.container-buttons-todo{
-  /* display:flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  align-items: flex-end; */
-  position : absolute;
-  bottom:0px;
-  right:0px;
-}
-
-.buttons-todo{
-  background-color:white;
-  border : none;
-  /* border : 1px solid #03187C; */
-  /* padding : 3px; */
-  margin: 2px;
-  /* border-radius: 10px; */
-}
-
-.strike{
-  text-decoration: line-through;
-}
 
 
-.form-container{
-  display: flex;
-  justify-content: center;
-}
-
-.form-create > textarea{
-  border: 4px dotted #03187C;
-  font-family:Verdana, Arial, Tahoma, sans-serif;
-}
-
-.form-create > button{
-  color: #2c0b8e;
-  padding: 5px 10px;
-  font-weight: bold;
-  cursor: pointer;
-  transition: all 0.2s ease;
-  position: relative;
-  display: inline-block;
-  outline: none;
-  border-radius: 5px;
-  border: 2px solid #2c0b8e;
-  background: #fff;
-}
-.form-create > button:hover {
-  background:#2c0b8e ;
-  color: #fff
-}
-
-i {
-  color :#03187C
-}
-
-/* .form-create > label {
-  display : inline-block;
-  
-} */
 
 
-/* .form-create-radio-input{
-border : 5px solid #2c0b8e;
-  
-} */
 
 
-/* .App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
 
 
